--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "funkymonkeylabs/phpsimpleexcel",
+    "name": "fml/phpsimpleexcel",
     "description": "PHPSimpleExcel is a library basing on oliverschwarz/php-excel",
-    "keywords": ["xls", "excel", "funkymonkeylabs"],
+    "keywords": ["xls", "excel", "funkymonkeylabs", "fml"],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -13,10 +13,13 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "require-dev": {
+      "phpunit/phpunit": "4.7.*"
+    },
     "autoload": {
-        "psr-0": {
-            "FunkyMonkeyLabs\\Tests": "tests/",
-            "FunkyMonkeyLabs": "src/"
-        }
+      "psr-0": { "FML\\PHPSimpleExcel\\": "src" }
+    },
+    "autoload-dev": {
+      "psr-0": { "FML\\Tests\\": "tests/" }
     }
 }
